# realistic-mouse-jiggler

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  about.hbs  about.toml  build.rs
.github/workflows/: release.yml  test-azure-signing.yml
docs/: cachyos-packaging.md  credits-third-party.md  release-signing.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/keys/: visorcraft-packages.asc
packaging/linux/: com.visorcraft.realistic-mouse-jiggler.desktop
scripts/: build-arch-package.sh  build-pacman-repo.sh  install-arch.sh
src/: app.rs  config.rs  events.rs  icons.rs  input.rs  jiggler.rs  main.rs  screens.rs  tray.rs
wix/: License.rtf  main.wxs
