[package]
name = "realistic-mouse-jiggler"
version = "0.3.0"
edition = "2021"
rust-version = "1.92"
authors = ["VisorCraft LLC <packages@visorcraft.com>"]
description = "Cross-platform desktop mouse jiggler with realistic motion, tray controls, and global bindings."
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.103"
directories = "6.0.0"
eframe = { version = "0.35.0", features = ["glow"] }
enigo = { version = "0.6.1", features = ["wayland"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.5", default-features = false, features = ["async-io", "blocking"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false }
